# ThreesACrowd

./: 100ppl_1grp_100x100.json  1ppl_1grp_10x10.json  4ppl_2grp_10x10.json  CMakeLists.txt  README.md  config.json
ThreesACrowdUnity/: Assembly-CSharp.csproj  ThreesACrowd.sln
ThreesACrowdUnity/Assets/: ThreesACrowd.unity
ThreesACrowdUnity/Assets/Prefabs/: Person.prefab
ThreesACrowdUnity/Assets/Scenes/: 100ppl1grp.txt  1ppl1grp.txt  locations.txt
ThreesACrowdUnity/Assets/Scripts/: PersonScript.cs  ReadPoints.cs  Time.cs
ThreesACrowdUnity/Temp/: UnityTempFile-91585df8f5ed143f7a2c6ca735db10ad
ThreesACrowdUnity/Temp/__Backupscenes/: 0.backup
src/: Grid.cpp  Grid.h  Person.cpp  Person.h  main.cpp  pointDisplay.cpp  pointDisplay.h
